--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "pg": "^7.12.1",
     "sequelize": "^5.15.1",
     "sequelize-cli": "^5.5.0"
+  },
+  "scripts": {
+    "start": "node ./bin/www",
+    "test": "jest --coverage"
   }
 }
