--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.15.1",
     "sequelize-cli": "^5.5.0"
-  },
-  "scripts": {
-    "start": "node ./bin/www",
-    "test": "jest --coverage"
   }
 }
