--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest --coverage"
+    "test": "jest"
+  },
+  "jest": {
+    "maxConcurrency": 1,
+    "verbose": true,
+    "collectCoverage": true
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,5 +20,10 @@
     "pg": "^7.12.1",
     "sequelize": "^5.15.1",
     "sequelize-cli": "^5.5.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^24.8.0",
+    "shelljs": "^0.8.3",
+    "supertest": "^4.0.2"
   }
 }
