--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest --runInBand --forceExit"
   },
   "jest": {
     "maxConcurrency": 1,
     "verbose": true,
-    "collectCoverage": true
+    "collectCoverage": true,
+    "globalSetup": "./spec/helper/testGlobalSetup.js",
+    "globalTeardown": "./spec/helper/testGlobalTeardown.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
