--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "~1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.15.1",
-    "sequelize-cli": "^5.5.0"
+    "sequelize-cli": "^5.5.0",
+    "weak": "^1.0.1"
   },
   "devDependencies": {
     "babel-jest": "^24.8.0",
