--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
     "database": "caloriecombs_production",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "operatorsAliases": false
+    "operatorsAliases": false,
+    "use_env_variable": "DATABASE_URL"
   }
 }
