--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "babel-jest": "^24.8.0",
     "shelljs": "^0.8.3",
     "supertest": "^4.0.2"
+  },
+  "engines": {
+    "node": "10.16.2"
   }
 }
